# lynx-studio

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: PROMPT_AUDITORIA_ANDROID_LYNX_STUDIO.md
scripts/: create-release-tag.mjs  patch-android-identity.mjs  patch-android-runtime.mjs  patch-android-signing.mjs
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/AI/: AISidebar.tsx  useAI.ts
src/components/CommandPalette/: CommandPalette.tsx
src/components/Editor/: CodeEditor.tsx  EditorEmptyState.tsx  EditorHeader.tsx  extensions.ts  languages.ts  themes.ts
src/components/FileTree/: FileTree.tsx  FileTreeItem.tsx  useFileTree.ts
src/components/KeyboardRow/: KeyboardRow.tsx  SYMBOLS.ts
src/components/Problems/: ProblemsPanel.tsx
src/components/Settings/: SettingsPanel.tsx
src/components/StatusBar/: StatusBar.tsx
src/components/Tabs/: Tab.tsx  TabBar.tsx
src/components/Terminal/: MiniTerminal.tsx
src/components/Workbench/: ActivityBar.tsx  ExplorerView.tsx  OutlineView.tsx  SearchView.tsx  (+3 more)
src/data/: sampleProject.ts
src/diagnostics/: index.ts  markers.ts  types.ts
src/hooks/: useDiagnosticNavigation.ts  useFileSystem.ts  useGestures.ts  useGit.ts  useKeyboard.ts  usePlatform.ts
src/store/: editorStore.ts  fileStore.ts  settingsStore.ts
src/styles/: editor.css  globals.css
(+10 files in other folders)
