[package]
name = "lynx-studio"
version = "0.1.0"
description = "Lynx Studio mobile-first code editor"
authors = ["Lynx Studio"]
edition = "2021"

[lib]
name = "lynx_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
